<resources>
    <string name="app_name">Data card</string>
    <string name="dateBirth">Дата рождения</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="save">сохранить</string>
    <string name="exit">выход</string>
    <string name="enterDate">Введите дату в формате dd-MM-yyyy</string>
    <string name="notAllFieldsAreFilledIn">Не все поля заполнены</string>
    <string name="numberPhone">Номер телефона</string>
    <string name="beforeBirthday">До дня рождения</string>
</resources>